<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sound"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            app:layout_constraintBottom_toTopOf="@id/delay_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/delay_label"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/delay"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/delay_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sound"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.slider.Slider
            android:id="@+id/delay_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="100"
            android:value="1000"
            android:valueFrom="100"
            android:valueTo="1000"
            app:layout_constraintBottom_toTopOf="@id/voices_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delay_label"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/voices_label"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/smaller_spacing"
            android:text="@string/voices_themes"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/voices_chooser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delay_slider"
            app:layout_constraintVertical_chainStyle="packed" />

        <Spinner
            android:id="@+id/voices_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/voices"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@id/highlight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/voices_label"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/highlight"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/button_highlight"
            app:layout_constraintBottom_toTopOf="@id/hard_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/voices_chooser"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hard_mode"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/hardmode_text"
            app:layout_constraintBottom_toTopOf="@id/bottom_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/highlight"
            app:layout_constraintVertical_chainStyle="packed" />

        <Space
            android:id="@+id/bottom_spacing"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bigger_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hard_mode" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
